Unidad2 -HTML - CSS
Realización Ejercicio Unidad 2 y Actualización Ejercicio Unidad 1 Curso HTML-CSS

--- a/De-0-a-Desarrollador/4-HTML-CSS/1-Unidad/Ejercicio1.html
+++ b/De-0-a-Desarrollador/4-HTML-CSS/1-Unidad/Ejercicio1.html
@@ -14,8 +14,8 @@
     -->
 </body>
 <ul>
-    <li><a href="https://www.youtube.com/watch?v=o7DksVpQr-M"></a>Air Magno - Mateo 7:13-14</li>
-    <li><a href="https://www.youtube.com/watch?v=QazZMp7ACVw"></a>Air Magno - Eterno28</li>
-    <li><a href="https://www.youtube.com/watch?v=gabJo4fuTN8"></a>Air Magno - Cupido</li>
+    <li><a href="https://www.youtube.com/watch?v=o7DksVpQr-M">https://www.youtube.com/watch?v=o7DksVpQr-M</a> - Air Magno - Mateo 7:13-14</li>
+    <li><a href="https://www.youtube.com/watch?v=QazZMp7ACVw">https://www.youtube.com/watch?v=QazZMp7ACVw</a> - Air Magno - Eterno28</li>
+    <li><a href="https://www.youtube.com/watch?v=gabJo4fuTN8">https://www.youtube.com/watch?v=gabJo4fuTN8</a> - Air Magno - Cupido</li>
 </ul>
 </html>
